# meu_state_tracker

./: .gitignore  LICENSE  README.md  demo.hs  effectful_docs.md  meu-ws-state-tracker.cabal  run_benchmark.hi  run_benchmark.hs  setup.sh  test_functionality.hs  test_runner.hi  test_runner.hs  verify_functionality.hs
app/: Main.hs
bench/: Main.hs
benchmark/: MonadicStackingBenchmark.hs  WSStateTrackerBenchmark.hs
src/MEU/API/: SUDIntegration.hs
src/MEU/Core/: System.hs  Triplet.hs  Types.hi  Types.hs
src/MEU/DSL/: Composition.hs  DataflowArrows.hs  Primitives.hs  Types.hs
src/MEU/IO/: API.hs
src/MEU/Internal/: Utils.hs
src/MEU/Logic/: Geometric.hs
src/MEU/Transforms/: Coarsening.hs  Refinement.hs
src/MEU/WS/: FeedbackMechanism.hs  Registries.hs  SimpleFeedback.hs  StateTracker.hs
test/: FunctionalityTest.hs  Spec.hs
test/MEU/Comprehensive/: TestRunner.hs
test/MEU/Core/: TripletSpec.hs
test/MEU/Performance/: BenchmarkTests.hs  WSStateTrackerBenchmark.hi  WSStateTrackerBenchmark.hs
test/MEU/Transforms/: RefinementSpec.hs
test/MEU/WS/: StateTrackerSpec.hs
