cabal-version: 3.4
name: meu-ws-state-tracker
version: 0.1.0.0
synopsis: MEU Framework Workspace State Tracker
description: Implementation of the Model-Execute-Update framework workspace state tracker in Haskell
license: MIT
license-file: LICENSE
author: MEU Framework Team
maintainer: meu@example.com
category: Development
build-type: Simple

common common-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -Wtabs
    -Wmissing-local-signatures
    -Wmissing-export-lists
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common-options
  exposed-modules:
    MEU.Core.Types
    MEU.Core.Triplet
    MEU.Core.System
    MEU.WS.StateTracker
    MEU.WS.Registries
    MEU.WS.SimpleFeedback
    MEU.DSL.Types
    MEU.DSL.Primitives
    MEU.DSL.DataflowArrows
    MEU.DSL.Composition
    MEU.API.SUDIntegration
    MEU.Transforms.Refinement
    MEU.Transforms.Coarsening
    MEU.IO.API
    MEU.Logic.Geometric
    MEU.Internal.Utils
  other-modules:
  hs-source-dirs: src
  build-depends:
    base >= 4.16 && < 5,
    containers >= 0.6,
    text >= 1.2,
    uuid >= 1.3,
    time >= 1.11,
    mtl >= 2.2,
    transformers >= 0.5,
    free >= 5.1,
    effectful >= 2.2,
    effectful-core >= 2.2,
    stm >= 2.5,
    aeson >= 2.0,
    bytestring >= 0.11,
    vector >= 0.12,
    unordered-containers >= 0.2,
    matrix >= 0.3

executable meu-ws-tracker
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    meu-ws-state-tracker

test-suite meu-ws-tracker-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    MEU.Core.TripletSpec
    MEU.WS.StateTrackerSpec
    MEU.Transforms.RefinementSpec
    MEU.Performance.BenchmarkTests
    MEU.Performance.WSStateTrackerBenchmark
    MEU.Comprehensive.TestRunner
  hs-source-dirs: test
  build-depends:
    base,
    meu-ws-state-tracker,
    hspec >= 2.8,
    QuickCheck >= 2.14,
    containers >= 0.6,
    stm >= 2.5,
    text >= 1.2,
    time >= 1.11,
    matrix >= 0.3,
    vector >= 0.12

benchmark meu-ws-tracker-bench
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: MonadicStackingBenchmark
  hs-source-dirs: bench, benchmark
  build-depends:
    base,
    meu-ws-state-tracker,
    criterion >= 1.5,
    stm >= 2.5,
    deepseq >= 1.4,
    containers >= 0.6,
    uuid >= 1.3,
    text >= 1.2,
    vector >= 0.12,
    time >= 1.11,
    effectful >= 2.2,
    effectful-core >= 2.2,
    matrix >= 0.3